--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -8,6 +8,7 @@
     tools:context=".activities.SplashActivity">
 
     <ImageView
+        android:id="@+id/iv_splash"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_film_3"
@@ -15,4 +16,13 @@
         app:tint="@color/white"
         tools:ignore="ContentDescription" />
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="32sp"
+        android:textColor="@color/white"
+        android:text="A Tv Shows App"
+        android:textAlignment="center"
+        android:layout_below="@id/iv_splash"
+        tools:ignore="HardcodedText" />
 </RelativeLayout>
