--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,15 +8,23 @@
 
 
     <include
+        android:id="@+id/appBar"
         layout="@layout/app_bar_search_in_list_fragment"/>
 
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_tv_shows"
+        android:layout_below="@id/appBar"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:listitem="@layout/vh_tv_show_item" />
 
+    <ProgressBar
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:id="@+id/progresBar"/>
 
 
-</LinearLayout>
+
+</RelativeLayout>
