--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -21,8 +21,7 @@
         android:layout_height="wrap_content"
         android:textSize="32sp"
         android:textColor="@color/white"
-        android:text="A Tv Shows App"
+        android:text="@string/a_tv_shows_app"
         android:textAlignment="center"
-        android:layout_below="@id/iv_splash"
-        tools:ignore="HardcodedText" />
+        android:layout_below="@id/iv_splash" />
 </RelativeLayout>
