--- a/app/src/main/res/layout/app_bar_search_in_list_fragment.xml
+++ b/app/src/main/res/layout/app_bar_search_in_list_fragment.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:drawableEnd="@drawable/ic_baseline_search_24"
         android:inputType="text"
-        android:hint="Search TV Shows"
+        android:hint="@string/search_tv_shows"
         android:textSize="16sp"
         android:drawableTint="@color/white"
         android:imeOptions="actionSearch"
@@ -22,6 +22,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="Autofill,HardcodedText,TextFields,UnusedAttribute" />
+        tools:ignore="Autofill,TextFields,UnusedAttribute" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
