--- a/app/src/main/res/layout/fragment_favorites.xml
+++ b/app/src/main/res/layout/fragment_favorites.xml
@@ -1,14 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".fragments.FavoritesFragment">
 
-    <!-- TODO: Update blank fragment layout -->
     <TextView
+        android:layout_height="?actionBarSize"
+        android:layout_width="match_parent"
+        android:background="@color/splash_background"
+        android:text="@string/favorites"
+        android:gravity="center"
+        android:textColor="@color/white"
+        android:textSize="30sp"
+        android:id="@+id/appBar"/>
+
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_tv_shows"
+        android:layout_below="@id/appBar"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        tools:listitem="@layout/vh_tv_show_item" />
 
-</FrameLayout>
+</RelativeLayout>
